--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -10,7 +10,7 @@ chdir = /home/devnet/gas-learning/
 # Django's wsgi 文件目录
 wsgi-file = django_project/wsgi.py
 # 最大进程数
-processes = 32
+processes = 5
 #每个进程的线程数
 threads = 1
 #状态监听端口
@@ -23,5 +23,5 @@ touch-reload = /home/devnet/gas-learning/
 #py-auto-reload = 1
 #后台运行并把日志存到.log文件
 daemonize = /home/devnet/gas-learning/uWSGI.log
-reload-mercy = 1
-worker-reload-mercy = 1
+; reload-mercy = 1
+; worker-reload-mercy = 1
